--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="topbar_nav">
       <div class="navbar">
-        <a href="  ">&nbsp;HOME</a>
+        <a href="2021_compilerlab.pdf" download>&nbsp;HOME</a>
       </div>
       <div class="navbar">
         <a href=" ">&nbsp;ABOUT US</a>
@@ -29,6 +29,7 @@
       </div>
     </div>
   </div>
+   
   <center>
     <div class="container">
     </div>
